data/all_generated_tests/raw_wast_tests/br_table_InfiniteLoops_2173.wast
;; 3. **Test 3**: Design a loop that utilizes `br_table` with an operand stack containing multiple data types. Ensure the type matching for all labels is accurately enforced.    - **Constraint**: Ensures operand type consistency across labels.    - **Relation to Infinite Loops**: Misaligned operand types can cause the loop to not resolve properly, leading to an infinite loop.

(assert_invalid
  (module
    (func (param i32) (param f32) (result i32)
      (loop (result i32)
        (block (result i32)
          (br_table 0 1 (i32.const 1) (local.get 0) (local.get 1))
        )
      )
    )
  )
  "type mismatch"
)